--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Shopbybrand/components/pdetailsbrand/pdetailsbrand.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Shopbybrand/components/pdetailsbrand/pdetailsbrand.css
@@ -3,7 +3,7 @@
     border-style: solid;
     border-width: 0 0 1px;
     margin: 0 1.5rem;
-    padding: 1.5rem 0;
+    padding: .5rem 0;
 }
 .pdetailsBrandImage {
     width: 50px;
@@ -14,8 +14,6 @@
     background-repeat: no-repeat;
 }
 .pdetailsBrandLabel {
-    margin-inline-start: 10px;
     display: inline-block;
-    margin-top: 17px;
     font-size: 15px;
 }
