--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/style.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/style.css
@@ -76,8 +76,8 @@
     padding: 10px 15px;
 }
 .footer-middle {
-    background: #333132;
-    color: #ffffff;
+    background:#ffffff;
+    color: #333333;
     padding: 40px 0 50px;
 }
 .footer-middle .app--flex {
@@ -86,37 +86,43 @@
 .col-custom-20pr {
     padding-right: 24px;
     padding-left: 24px;
-    width: 20%;
-    float: start;
+    width: 25%;
     text-align: start;
 }
 .footer--custom_title {
-    font-size: 21px;
+    font-size: 18px;
     font-weight: bold;
-    line-height: 29px;
+    line-height: 22px;
     text-align: start;
     width: 100%;
     display: flex;
+    color: #333;
+}
+.footer--custom_desc {
+    font-size: 13px;
+    line-height: 16px;
+    color: #333333;
 }
 .col-custom-20pr ul {
-    margin-top: 16px;
+    margin-top: 15px;
 }
 .col-custom-20pr ul li:not(:last-child) {
-    margin-bottom: 16px;
+    margin-bottom: 12px;
 }
 .col-custom-20pr ul li a {
-    font-size: 16px;
-    line-height: 24px;
-    color: #ffffff;
+    font-size: 15px;
+    line-height: 19px;
+    color: #333333;
 }
 .col-custom-20pr .list-contact li,
 .col-custom-20pr .list-contact li a{
-    color: #adadad;
-    font-size: 16px;
+    color: #333333;
+    font-size: 15px;
+    line-height: 20px;
     text-decoration: none;
 }
 .social__md-block {
-    margin-top: 8px;
+    margin-top: 15px;
     justify-content: start;
     display: flex;
     flex-wrap: wrap;
@@ -137,7 +143,7 @@
 .facebook-icon path,
 .twitter-icon path,
 .instagram-icon path {
-    fill: #adadad;
+    fill: #0082FF;
 }
 
 .instagram-icon circle {
@@ -187,7 +193,20 @@
 
 .mastercard_image_container img {
     height: 30px;
+    
+}
+
+.app-copyright {
+    padding: 18px 0;
+    background-color: #D9D9D9;
+}
+
+.copy-right {
     margin-top: 10px;
+    text-align: center;
+    font-size: 13px;
+    line-height: 16px;
+    color: #333333;
 }
 @media (min-width: 1200px) and (max-width: 1919px) {
     .newsletter__form > .email {
