--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/cartCounter.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/cartCounter.css
@@ -1,19 +1,19 @@
 .root {
     position: absolute;
-    width: 20px;
-    height: 20px;
-    background:#f69435;
+    width: 16px;
+    height: 16px;
+    background:#0082FF;
     color: #fff;
     border-radius: 100%;
     z-index: 5;
-    font-size: 12px;
-    line-height: 15px;
+    font-size: 10px;
+    line-height: 13px;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-direction: column;
     flex-direction: column;
     -ms-flex-pack: center;
     justify-content: center;
-    top: -10px;
-    right: 0px;
+    top: -2px;
+    right: 6px;
 }
