update quantity product

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/header.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/header.css
@@ -10,6 +10,11 @@
 .header-app-bar button {
     width: unset;
 }
+.header-logo {
+    min-width: 254px;
+    display: flex;
+    justify-content: flex-start;
+}
 .header-logo .siminia-logo {
     cursor: pointer;
     display: flex;
