add quantity and add to cart product category

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.css
@@ -12,6 +12,30 @@
     width: 48%;
 }
 
+.add-to-cart-action {
+    margin-top: 14px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.add-to-cart-btn {
+    margin-top: 10px;
+    min-height: 30px;
+    padding: 6px 18px;
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #0082FF;
+    border-radius: 4px;
+}
+
+.quantity {
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
 @media (min-width: 1024px) {
     .siminia-product-list-item{
         width: 25%;
@@ -57,14 +81,13 @@ Grid item
 .siminia-product-des .product-name.small {
     width: 100%;
     font-size: 16px;
-    margin-bottom: 10px;
-    margin-bottom: 8px;
+    margin-bottom: 12px;
     text-align: start;
     font-weight: 400;
     text-overflow: ellipsis;
     overflow: hidden;
     line-height: 24px;
-    max-height: 44px;
+    max-height: 48px;
 }
 
 .siminia-product-des .product-short-description {
