--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/qty.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/qty.scss
@@ -1,6 +1,7 @@
 .grid-item-quantity {
     display: flex;
     align-items: center;
+
     .btn-plus, .btn-minus {
         width: 30px;
         height: 30px;
@@ -18,5 +19,6 @@
         background: #F5F5F5;
         margin: 0 8px;
         padding: 6px;
+        text-align: center;
     }
 }
