--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/Button/index.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/Button/index.css
@@ -1,11 +1,10 @@
 .siminia-color-btn {
     white-space: nowrap;
     text-align: center;
-    padding-top: 10px;
     cursor: pointer;
     font-weight: 400;
     margin-left: 5px;
-    color: rgb(0 130 255);
+    color: rgb(47, 183, 236);
     background: transparent;
     border: 1px solid rgb(47, 183, 236);
     border-radius: 4pt;
