--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -25,6 +25,9 @@
         font-weight: 400;
         padding: 0 1.5rem;
     }
+    .tier-prices-bundle {
+        padding: 0 1.5rem;
+    }
 
     .image-carousel {
         margin: 0 auto;
