--- a/reactjs-pwa/packages/siminia/src/index.css
+++ b/reactjs-pwa/packages/siminia/src/index.css
@@ -144,7 +144,7 @@
 :global(:root) {
     --simicolor-key_color: #ff9800;
     --simicolor-top_menu_icon_color: #ffffff;
-    --simicolor-button_background: #000000;
+    --simicolor-button_background: #0082FF;
     --simicolor-button_text_color: #ffffff;
     --simicolor-menu_background: #1b1b1b;
     --simicolor-menu_text_color: #ffffff;
