--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/AddressBook/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/AddressBook/style.scss
@@ -55,7 +55,7 @@
         }
     }
     .add-new-address {
-        background-color: #0f7d37;
+        background-color: #0082FF;
         color: #ffffff;
         margin-top: 15px;
         font-weight: 500;
@@ -176,7 +176,7 @@
         }
         .form-button {
             .btn-save-address {
-                background-color: #0f7d37;
+                background-color: #0082FF;
                 color: #ffffff;
                 display: inline-block;
                 font-weight: 500;
