--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/Wishlist/index.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/Wishlist/index.scss
@@ -53,6 +53,10 @@
         text-decoration: none;
         display: block;
     }
+    .siminia-product-grid-item .product-item-action a {
+        background-color: #0082FF;
+        color: #fff;
+    }
     .siminia-product-grid-item .siminia-product-des {
         margin-top: 16px;
     }
