--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
@@ -16,7 +16,7 @@
     line-height: 29px;
     font-weight: bold;
     padding: 16px;
-    background: #0f7d37;
+    background: #0082FF;
     color: #fff;
 }
 .menu-header .menu-logout {
@@ -174,6 +174,10 @@
     margin: 24px 0 16px;
     padding: 10px 18px;
     width: 100px;
+    background-color: #0082FF;
+    border-radius: 4px;
+    color: #fff;
+    border: none;
 }
 
 /* book addresses */
@@ -285,7 +289,7 @@
     background: rgba(15, 125, 55, 0.05);
 }
 .customer-page-title .view-all {
-    color: #0f7d37;
+    color: #0082FF;
     font-size: 16px;
     line-height: 24px;
     text-decoration: underline;
@@ -333,7 +337,7 @@
     margin-bottom: 8px;
 }
 .dash-column-box .edit-link {
-    color: #0f7d37;
+    color: #0082FF;
     text-decoration: underline;
     cursor: pointer;
     margin-bottom: 8px;
