--- a/reactjs-pwa/packages/siminia/src/simi/App/core/Cart/PriceAdjustments/CouponCode/couponCode.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/core/Cart/PriceAdjustments/CouponCode/couponCode.scss
@@ -8,6 +8,7 @@
         font-weight: 500;
         font-size: 16px;
         margin-bottom: 10px;
+        outline: none;
         svg {
             vertical-align: middle;
         }
@@ -30,7 +31,7 @@
         }
 
         .submit-coupon {
-            background-color: #101820;
+            background-color: #0082FF;
             color: #fff;
             height: 48px;
             &.loading {
