--- a/reactjs-pwa/packages/siminia/static/simistatic/style.css
+++ b/reactjs-pwa/packages/siminia/static/simistatic/style.css
@@ -63,7 +63,6 @@ div#app-loading {
 .siminia-breadcrumb {
     padding: unset;
     color: #727272;
-    font-family: "Nunito";
     font-size: 12px;
     line-height: 12px;
 }
@@ -77,7 +76,7 @@ div#app-loading {
     color: #d7272e;
 }
 .breadcrumb-item:last-of-type {
-    color: #d7272e;
+    color: #0082FF;
     cursor: unset;
 }
 /**
