--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/SignIn/signIn.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/SignIn/signIn.scss
@@ -53,6 +53,7 @@ $gray: #38404A;
         width: 100%;
         min-width: 200px;
         padding-bottom: 10px;
+        border-radius: 4px;
     }
     
     .signInButton:hover {
