--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/CreateAccount/createAccount.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Login/CreateAccount/createAccount.scss
@@ -51,6 +51,7 @@ $color_1: red;
         width: 100%;
         min-width: 200px;
         padding-bottom: 10px;
+        border-radius: 4px;
         &:hover{
             opacity: 0.8;
         }
