--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/AddressBook/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/AddressBook/style.scss
@@ -34,7 +34,7 @@
     .box-action {
         margin-top: 6px;
         span {
-            color: #0f7d37;
+            color: #0082FF;
             cursor: pointer;
         }
     }
