--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/Wishlist/index.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/Page/Wishlist/index.scss
@@ -54,8 +54,7 @@
         display: block;
     }
     .siminia-product-grid-item .product-item-action a {
-        background-color: #0082FF;
-        color: #fff;
+        border-radius: 4px;
     }
     .siminia-product-grid-item .siminia-product-des {
         margin-top: 16px;
