--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
@@ -41,6 +41,7 @@
         color: #333132;
         font-weight: bold;
         margin-bottom: 8px;
+        border-radius: 4px;
     }
 }
 .customer-menu-item.active {
@@ -345,6 +346,7 @@
 }
 .dash-column-box .edit-information {
     width: 100px;
+    border-radius: 4px;
 }
 .dashboard-address-book {
     margin-top: 40px;
