--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -112,6 +112,7 @@
     }
     .add-to-wishlist-btn {
         width: 100%;
+        border-radius: 4px;
     }
     .social-share {
         padding: 0 1.5rem 1rem;
