--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/ProductListing/CartItem/cartItem.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/ProductListing/CartItem/cartItem.scss
@@ -100,6 +100,14 @@ tr.simicart-siminia-cart-item {
                 cursor: pointer;
                 font-weight: 300;
             }
+            .minus-quantity {
+                border-bottom-left-radius: 4px;
+                border-top-left-radius: 4px;
+            }
+            .increase-quantity {
+                border-bottom-right-radius: 4px;
+                border-top-right-radius: 4px;
+            }
         }
     }
     td.td-item-subtotal {
