--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/PriceAdjustments/priceAdjustments.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/PriceAdjustments/priceAdjustments.scss
@@ -33,8 +33,8 @@
                 font-size: 16px;
                 line-height: 16px;
                 font-weight: 500;
-                background-color: var(--simicolor-secondary-button_background);
-                color: var(--simicolor-secondary-button_text_color);
+                border-top-right-radius: 4px;
+                border-bottom-right-radius: 4px;
             }
         }
     }
