--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
@@ -241,13 +241,13 @@
     margin-top: 16px;
 }
 .book-actions .edit-item {
-    color: #0f7d37;
+    color: #0082FF;
     text-decoration: underline;
     cursor: pointer;
 }
 .book-actions .del-item {
     margin-left: 24px;
-    color: #0f7d37;
+    color: #0082FF;
     text-decoration: underline;
     cursor: pointer;
 }
@@ -299,7 +299,7 @@
     cursor: pointer;
 }
 .view-order {
-    color: #0f7d37;
+    color: #0082FF;
     text-decoration: underline;
     cursor: pointer;
     white-space: nowrap;
@@ -360,7 +360,7 @@
 }
 .dash-column-box .edit-item {
     margin: 8px 0 0;
-    color: #0f7d37;
+    color: #0082FF;
     text-decoration: underline;
     cursor: pointer;
 }
@@ -410,9 +410,9 @@
     line-height: 0px;
 }
 
-.cart-item-value span {
-    color: rgb(171, 69, 47) !important;
-}
+// .cart-item-value span {
+//     color: rgb(171, 69, 47) !important;
+// }
 
 /* newsletter */
 .customer-dashboard.newsletter .customer-page-content {
@@ -522,7 +522,7 @@
     margin-top: 8px;
 }
 .green {
-    color: #0f7d37;
+    color: #0082FF;
 }
 .detail-col .address {
     margin-inline-start: 16px;
@@ -640,7 +640,6 @@
     justify-content: space-between;
 }
 .box-total-price .summary-price-line.total {
-    color: #0f7d37;
     font-weight: bold;
 }
 .box-total-price .summary-price-line:not(:first-child) {
@@ -651,6 +650,7 @@
     padding: 10px 18px;
     margin-top: 24px;
     background: transparent;
+    border-radius: 4px;
 }
 
 @media (max-width: 767px) {
