--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/ShippingInformation/AddressForm/guestForm.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/ShippingInformation/AddressForm/guestForm.css
@@ -92,6 +92,7 @@
     padding: 15px 30px 14px;
     font-weight: 500;
     text-transform: uppercase;
+    border-radius: 4px;
 }
 
 .submit:hover {
