--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/newsletter.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/newsletter.scss
@@ -19,6 +19,8 @@
             color: #FFFFFF;
             padding-top: 0;
             background-color: #444444;
+            border-top-right-radius: 4px;
+            border-bottom-right-radius: 4px;
         }
 
         .in-valid {
