--- a/reactjs-pwa/packages/siminia/static/simistatic/core-theme-style.css
+++ b/reactjs-pwa/packages/siminia/static/simistatic/core-theme-style.css
@@ -62,17 +62,17 @@ div#app-loading {
 .siminia-breadcrumb {
     padding: unset;
     color: #727272;
-    font-size: 12px;
-    line-height: 12px;
+    font-size: 13px;
+    line-height: 13px;
 }
 .breadcrumb-item {
     cursor: pointer;
-    line-height: 12px;
+    line-height: 13px;
     display: inline-block;
     color: #727272;
 }
 .breadcrumb-item:hover {
-    color: #d7272e;
+    color: #0082FF;
 }
 .breadcrumb-item:last-of-type {
     color: #0082FF;
