--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -93,6 +93,16 @@
         }
     }
 
+    .product-sku {
+        padding: 0 1.5rem;
+        margin-bottom: 15px;
+    }
+
+    .product-sku span {
+        text-transform: uppercase;
+        font-size: 14px;
+    }
+
     .add-to-cart-ctn {
         width: 100%;
         min-width: 200px;
