--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Customer/Account/style.scss
@@ -673,7 +673,7 @@
     .menu-header {
         display: flex;
         align-items: center;
-        background: #0f7d37;
+        background: #0082FF;
         padding-right: 16px;
     }
     .menu-header .welcome-customer {
