--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/AddressBook/addressBook.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/AddressBook/addressBook.css
@@ -39,17 +39,19 @@
     padding: 10px 28px;
     border: solid #000 1px;
     text-transform: uppercase;
+    border-radius: 4px;
 }
 
 .applyButton {
     border-radius: 0;
-    background-color: #000;
+    background-color: #0082FF;
+    border-radius: 4px;
     color: #ffffff;
     font-size: 14px;
     line-height: 16px;
     font-weight: 700;
     padding: 10px 28px;
-    border: solid #000 1px;
+    border: solid #0082FF 1px;
     text-transform: uppercase;
 }
 
