--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/ShippingMethod/updateModal.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/ShippingMethod/updateModal.css
@@ -16,6 +16,7 @@
 .buttons button {
     border-radius: 0;
     border: solid 1px #000;
+    border-radius: 4px;
     font-size: 16px;
     line-height: 19px;
     padding: 15px 30px 14px;
@@ -30,8 +31,9 @@
     box-shadow: 0px 0px 1px 0px #000;
 }
 .buttons button[type="submit"] {
-    background-color: #000;
+    background-color: #0082FF;
     color: white;
+    border-color: #0082FF;
 }
 .buttons button[type="reset"] {
     background-color: #ffffff;
