update validate for custom product

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -156,6 +156,14 @@
 
     .options {
         padding: 0 1.5rem;
+        .option-field-error {
+            color: #e02b27;
+        }
+        .options-error-form {
+            textarea {
+                border: 1px solid #e02b27;
+            } 
+        }
         .option-item-type {
             &.option-item-type-size {
                 button {
