--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -29,6 +29,19 @@
         padding: 0 1.5rem;
     }
 
+    .grouped-options {
+        .tier-prices-bundle {
+            margin-top: 10px;
+            padding: 0;
+        }
+    }
+
+    .bundle-show-options {
+        .tier-prices-bundle {
+            margin-top: 0.5rem;
+        }
+    }
+
     .image-carousel {
         margin: 0 auto;
         min-width: 300px;
@@ -69,7 +82,7 @@
         }
     }
     .cart-actions {
-        padding: 1rem 1.5rem;
+        padding: 0 1.5rem 1rem;
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
@@ -113,8 +126,8 @@
         padding: 12px;
     }
     .wishlist-actions {
+        margin-top: 30px;
         padding: 0 1.5rem 1rem;
-        margin-bottom: 30px;
         display: flex;
         justify-content: space-between;
         margin-bottom: 30px;
