--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/newsletter.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Footer/newsletter.scss
@@ -18,9 +18,10 @@
             line-height: 18px;
             color: #FFFFFF;
             padding-top: 0;
-            background-color: #444444;
+            background-color: #0082ff;
             border-top-right-radius: 4px;
             border-bottom-right-radius: 4px;
+            border-color: #0082ff;
         }
 
         .in-valid {
