--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/Products/Filter/rangeslider.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/Products/Filter/rangeslider.scss
@@ -110,7 +110,7 @@
     }
 
     .input-range__track--active {
-        background: rgb(246, 148, 53);
+        background:  #0083ff;
     }
 
     .input-range {
