--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/cart.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Cart/cart.scss
@@ -165,6 +165,9 @@
                     font-size: 14px;
                     font-weight: 600;
                     border-radius: 4px;
+                    &.disable {
+                        opacity: 0.4;
+                    }
                 }
             }
         }
