fix image and cart

--- a/reactjs-pwa/packages/siminia/src/simi/App/FashionTheme/RootComponents/Product/ProductFullDetail/ProductImage/style.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/FashionTheme/RootComponents/Product/ProductFullDetail/ProductImage/style.scss
@@ -10,7 +10,7 @@
         left: 20px;
     }
     .carousel-slider {
-        border: solid #eaeaea 1px;
+        // border: solid #eaeaea 1px;
         li.slide {
             background: none;
         }
