fix bug style home and minimal order cart

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/header.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Header/header.css
@@ -15,11 +15,11 @@
     justify-content: flex-start;
 }
 
-@media(min-width: 1024px) {
+/* @media(min-width: 1024px) {
     .header-logo {
         min-width: 254px;
     }
-}
+} */
 
 .header-logo .siminia-logo {
     cursor: pointer;
