--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
@@ -57,7 +57,7 @@
             position: absolute;
             line-height: 45px;
             font-size: 37px;
-            color: #fff;
+            color: #0082ff;
             bottom: 0;
             z-index: 1;
             font-weight: bold;
@@ -88,7 +88,7 @@
         background: #333132;
     }
     .default-home-product-list {
-        background: #f3f3f3;
+        background: #fff;
         min-height: 855px;
         .default-productlist-item {
             min-height: 855px;
