--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
@@ -73,17 +73,17 @@
                 <h3 style="margin-right:0cm;margin-bottom:7.5pt;margin-left:0cm;text-align:center"><span style="font-size:13.0pt;font-family: Verdana,sans-serif;color:#333333">Your order</span>  <span>#{{var order.increment_id}}</span></h3>
                 <p align="center" style="margin-right:0cm;margin-bottom:11.25pt;margin-left:0cm;text-align:center">
                     <span style="font-size:8.5pt;font-family:Verdana, sans-serif">
-                        Placed on {{var order.getCreatedAtFormated('long')}}
+                        Placed on {{var created_at_formatted}}
                     </span>
                 </p>
             </td>
         </tr>
         <tr class="order-information">
             <td>
-                {{if order.getEmailCustomerNote()}}
+                {{if order_data.email_customer_note }}
                 <table cellspacing="0" cellpadding="0" class="message-container">
                     <tr>
-                        <td>{{var order.getEmailCustomerNote()}}</td>
+                        <td>{{var order_data.email_customer_note }}</td>
                     </tr>
                 </table>
                 {{/if}}
@@ -94,28 +94,32 @@
                             <td align="top" style="padding:7.5pt 11.25pt 0cm 11.25pt">
                                 <p style="margin-top:3.75pt"><b><span style="font-size:9.0pt;font-family:Verdana,sans-serif;color:#3696c2;text-transform:uppercase">Bill to:</span></b></p>
                                 <p style="margin-right:0cm;margin-bottom:11.25pt;margin-left:0cm;line-height:13.5pt">
-                                    <span class="no-link">{{var order.getBillingAddress().format('html')}}</span>
-                                </p>
+                                     <span style="margin-right:0cm;margin-bottom:11.25pt;margin-left:0cm;line-height:13.5pt;font-size:9.0pt;font-family:Verdana,sans-serif">{{var formattedBillingAddress|raw}}</span>
+                                 </p>
                             </td>
-                            {{depend order.getIsNotVirtual()}}
+                            {{depend order_data.is_not_virtual}}
                             <td align="top" style="padding:7.5pt 11.25pt 0cm 11.25pt">
                                 <p style="margin-top:3.75pt"><b><span style="font-size:9.0pt;font-family:Verdana,sans-serif;color:#3696c2;text-transform:uppercase">Ship to:</span></b></p>
                                 <p style="margin-right:0cm;margin-bottom:11.25pt;margin-left:0cm;line-height:13.5pt">
-                                    <span class="no-link">{{var order.getShippingAddress().format('html')}}</span>
+                                    <span style="margin-right:0cm;margin-bottom:11.25pt;margin-left:0cm;line-height:13.5pt;font-size:9.0pt;font-family:Verdana,sans-serif">{{var formattedShippingAddress|raw}}</span>
                                 </p>
                             </td>
                             {{/depend}}
                         </tr>
                         <tr>
-                            {{depend order.getIsNotVirtual()}}
-                            <td class="method-info">
-                                <h6>Shipping method:</h6>
-                                <p>{{var order.shipping_description}}</p>
+                            {{depend order_data.is_not_virtual}}
+                            <td valign="top" style="padding:7.5pt 11.25pt 7.5pt 11.25pt">
+                                <p style="margin-top:3.75pt"><b><span style="font-size:9.0pt;font-family:Verdana,sans-serif;color:#3696c2;text-transform:uppercase">Shipping method:</span></b></p>
+                                <p style="margin-right:0cm;margin-bottom:3.75pt;margin-left:0cm;line-height:13.5pt;font-size:9.0pt;font-family:Verdana,sans-serif">
+                                    {{var order.shipping_description}}
+                                </p>
                             </td>
                             {{/depend}}
-                            <td class="method-info">
-                                <h6>Payment method:</h6>
-                                {{var payment_html|raw}}
+                            <td valign="top" style="padding:7.5pt 11.25pt 7.5pt 11.25pt">
+                                <p style="margin-top:3.75pt"><b><span style="font-size:9.0pt;font-family:Verdana,sans-serif;color:#3696c2;text-transform:uppercase">Payment method:</span></b></p>
+                                <p style="margin-right:0cm;margin-bottom:3.75pt;margin-left:0cm;line-height:13.5pt;font-size:9.0pt;font-family:Verdana,sans-serif">
+                                    {{var order.getPayment().getMethodInstance().getTitle()}}
+                                </p> 
                             </td>
                         </tr>
                     </tbody>
