--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/PaymentInformation/SimiPayments/simiPayment.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Checkout/PaymentInformation/SimiPayments/simiPayment.css
@@ -55,6 +55,7 @@
     grid-column-end: span 1;
 }
 
+.cimfield,
 .simi_guest_email,
 .country,
 .street1,
@@ -108,6 +109,7 @@
  */
 
 @media (max-width: 960px) {
+    .cimfield,
     .simi_guest_email,
     .first_name,
     .last_name,
