--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
@@ -9,7 +9,7 @@
 "var formattedBillingAddress|raw":"Billing Address",
 "var order_data.email_customer_note|escape|nl2br":"Email Order Note",
 "var order.increment_id":"Order Id",
-"layout handle=\"sales_email_order_items\" order=$order area=\"frontend\"":"Order Items Grid",
+"layout handle=\"simi_sales_email_order_items\" order=$order area=\"frontend\"":"Order Items Grid",
 "var payment_html|raw":"Payment Details",
 "var formattedShippingAddress|raw":"Shipping Address",
 "var order.shipping_description":"Shipping Description",
@@ -64,7 +64,6 @@
                             </td>
                         </tr>
                     </tbody>
-           
                 </table>
             </td>
         </tr>
@@ -87,7 +86,7 @@
                     </tr>
                 </table>
                 {{/if}}
-                {{layout handle="sales_email_order_items" order_id=$order_id area="frontend"}}
+                {{layout handle="simi_sales_email_order_items" order_id=$order_id area="frontend"}}
                 <table cellpadding="0" cellspacing="0" border="0" style="width:100.0%;border-collapse:collapse">
                     <tbody>
                          <tr>
@@ -130,4 +129,4 @@
 
 </table>
 
-{{template config_path="design/email/footer_template"}}
+{{template config_path="siminiaconfig/custom_email/email_footer_template"}}
