update template email

--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_header_template.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_header_template.html
@@ -41,6 +41,10 @@
             border-left: solid #eaeaea 1.0pt;
         }
 
+        .email-items thead > tr > th.item-sku {
+            text-align: left;
+        }
+
         .email-items thead > tr > th.item-qty {
             text-align: center;
         }
@@ -187,7 +191,7 @@
         .email-ar .email-items {
             direction: rtl;
         }
-        .email-ar .email-items thead > tr > td.item-info {
+        .email-ar .email-items thead > tr > th.item-info {
             text-align: right;
             border-left: none;
             border-right: solid #eaeaea 1.0pt;
