--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_ar.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_ar.html
@@ -94,7 +94,7 @@
                     {{/depend}}
                     <td class="method-info">
                         <h6 dir="LTR">{{trans "Payment method"}}:</h6>
-                        {{var payment_html || raw}}
+                        {{var payment_html|raws}}
                     </td>
                 </tr>
             </table>
