--- a/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
+++ b/app/code/Simi/Simicustomize/view/frontend/email/simi_new_order_eng.html
@@ -117,7 +117,7 @@
                             <td valign="top" style="padding:7.5pt 11.25pt 7.5pt 11.25pt">
                                 <p style="margin-top:3.75pt"><b><span style="font-size:9.0pt;font-family:Verdana,sans-serif;color:#3696c2;text-transform:uppercase">Payment method:</span></b></p>
                                 <p style="margin-right:0cm;margin-bottom:3.75pt;margin-left:0cm;line-height:13.5pt;font-size:9.0pt;font-family:Verdana,sans-serif">
-                                    {{var order.getPayment().getMethodInstance().getTitle()}}
+                                    {{var payment_html|raws}}
                                 </p> 
                             </td>
                         </tr>
