--- a/app/code/Simi/Simicustomize/view/frontend/layout/simi_sales_email_order_invoice_renderers.xml
+++ b/app/code/Simi/Simicustomize/view/frontend/layout/simi_sales_email_order_invoice_renderers.xml
@@ -8,7 +8,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd" label="Email Creditmemo Items List" design_abstraction="custom">
     <body>
         <referenceBlock name="simi.sales.email.order.invoice.renderers">
-            <block class="Magento\Sales\Block\Order\Email\Items\DefaultItems" name="simi.sales.email.order.invoice.renderers.default" as="default" template="Magento_Sales::email/items/invoice/default.phtml"/>
+            <block class="Magento\Sales\Block\Order\Email\Items\DefaultItems" name="simi.sales.email.order.invoice.renderers.default" as="default" template="Simi_Simicustomize::email/items/invoice/default.phtml"/>
         </referenceBlock>
     </body>
 </page>
