--- a/app/code/Simi/Simicustomize/view/frontend/templates/email/invoice/items.phtml
+++ b/app/code/Simi/Simicustomize/view/frontend/templates/email/invoice/items.phtml
@@ -14,13 +14,13 @@
                 <th class="item-info">
                     <?= $block->escapeHtml(__('Items')) ?>
                 </th>
-                <th class="item-info">
+                <th class="item-sku">
                     <?= $block->escapeHtml(__('Sku')) ?>
                 </th>
                 <th class="item-qty">
                     <?= $block->escapeHtml(__('Qty')) ?>
                 </th>
-                <th class="item-subtotal">
+                <th class="item-price">
                     <?= $block->escapeHtml(__('Subtotal')) ?>
                 </th>
             </tr>
