--- a/app/code/Simi/Simicustomize/view/frontend/templates/email/shipment/items.phtml
+++ b/app/code/Simi/Simicustomize/view/frontend/templates/email/shipment/items.phtml
@@ -14,6 +14,9 @@
                 <th class="item-info">
                     <?= $block->escapeHtml(__('Items')) ?>
                 </th>
+                <th class="item-sku">
+                    <?= $block->escapeHtml(__('Sku')) ?>
+                </th>
                 <th class="item-qty">
                     <?= $block->escapeHtml(__('Qty')) ?>
                 </th>
