--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
@@ -57,14 +57,23 @@
             position: absolute;
             line-height: 45px;
             font-size: 37px;
-            color: #0082ff;
+            color: #fff;
             bottom: 0;
             z-index: 1;
             font-weight: bold;
             left: 0;
             right: 0;
             width: 100%;
-            background-color: rgba(33, 39, 46, 0.5);
+            // background-color: #0082FF;
+            // opacity: .5;
+            .blue-background {
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                background-color: #0082FF;
+                opacity: .5;
+                z-index: -1;
+            }
             .--text {
                 display: flex;
                 align-items: center;
@@ -72,6 +81,7 @@
                 width: calc(100% - 60px);
                 padding-inline-start: 15px;
                 padding-inline-end: 48px;
+                z-index: 2;
             }
         }
         .cate-arrow {
@@ -80,12 +90,17 @@
             right: 0;
             z-index: 1;
             width: 60px;
-            height: 60px;
-            background: #38404a;
+            height: 100%;
+            background: #0082FF;
+            & > svg {
+                top: 50%;
+                transform: translateY(-50%);
+                position: absolute;
+            } 
         }
     }
     .home-cate-item:hover .cate-arrow {
-        background: #333132;
+        background: #0082FF;
     }
     .default-home-product-list {
         background: #fff;
