fix bug albahar

--- a/app/code/Simi/Simicustomize/view/frontend/templates/email/items.phtml
+++ b/app/code/Simi/Simicustomize/view/frontend/templates/email/items.phtml
@@ -24,7 +24,7 @@
                     <?= $block->escapeHtml(__('Qty')) ?>
                 </th>
                 <th class="item-price">
-                    <?= $block->escapeHtml(__('Price')) ?>
+                    <?= $block->escapeHtml(__('Subtotal')) ?>
                 </th>
             </tr>
         </thead>
