--- a/app/code/Simi/Simicustomize/view/frontend/templates/email/items/order/default.phtml
+++ b/app/code/Simi/Simicustomize/view/frontend/templates/email/items/order/default.phtml
@@ -31,7 +31,7 @@ $_order = $_item->getOrder();
         <?php endif; ?>
         <?= $block->escapeHtml($_item->getDescription()) ?>
     </td>
-    <td class="item-sku"><?= $block->escapeHtml(__('SKU')) ?>: <?= $block->escapeHtml($block->getSku($_item)) ?></td>
+    <td class="item-sku"><?= $block->escapeHtml($block->getSku($_item)) ?></td>
     <td class="item-qty"><?= (float) $_item->getQtyOrdered() ?></td>
     <td class="item-price">
         <?= /* @noEscape */ $block->getItemPrice($_item) ?>
