fix bug and remove console log

--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.css
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/BaseComponents/GridItem/item.css
@@ -224,3 +224,8 @@ Rate
 .prices-layout-rtl{
     text-align: right;
 }
+
+.add-to-cart-action-rtl .quantity{
+    margin-left: 10px;
+    margin-right: 0;
+}
