--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/RootComponents/Product/ProductFullDetail/productFullDetail.scss
@@ -55,6 +55,15 @@
         }
     }
 
+    .prices-container {
+        .price-bundle {
+            .price {
+                font-size: 28px;
+                font-weight: 800;
+            }
+        }
+    }
+
     .main-actions {
         width: 40%;
         min-width: 300px;
