--- a/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
+++ b/reactjs-pwa/packages/siminia/src/simi/App/AlBahar/Home/home.scss
@@ -70,8 +70,8 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                background-color: #0082FF;
-                opacity: .5;
+                background-color: #0084FF;
+                // opacity: .5;
                 z-index: -1;
             }
             .--text {
