--- a/app/code/Mageplaza/PdfInvoice/view/frontend/customize/invoice_template_html.html
+++ b/app/code/Mageplaza/PdfInvoice/view/frontend/customize/invoice_template_html.html
@@ -29,7 +29,7 @@
               </tr>
               <tr>
                 <td style="width: 105px;">Phone No</td><td style="width:15px">:</td>
-                <td style="text-align:center;">{{var businessInformation.getPhone()}}</td>
+                <td style="text-align:center;">{{var billing.getTelephone()}}</td>
                 <td style="direction:rtl;width: 120px;">رقم الھاتف :</td>
               </tr>
               <tr>
